--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-=======
-<manifest xmlns:tools="http://schemas.android.com/tools"
-	xmlns:android="http://schemas.android.com/apk/res/android"
->>>>>>> aa2d5bd (Delete commits)
-	 >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 	
 
@@ -14,62 +8,16 @@
 		android:theme="@style/AppTheme"
 		android:label="@string/app_name" >
 		<activity
-		android:name=".LoginFragment"
-		android:configChanges="orientation|keyboardHidden|screenSize"
-		android:label="@string/app_name"
+		android:name=".MainActivity"
 		android:exported="true"  >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
-		<activity
-			android:name=".ReportFragment"
-			android:configChanges="orientation|keyboardHidden|screenSize"
-			android:label="@string/app_name"
-			android:exported="true"  >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
 
-<<<<<<< HEAD
-		<activity
-		android:name=".reportlistfragment_activity"
-		android:configChanges="orientation|keyboardHidden|screenSize"
-		android:label="@string/app_name"
-		android:exported="true"  >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		
-=======
-
-		<application
-			android:allowBackup="true"
-			android:theme="@style/AppTheme"
-			android:label="@string/app_name"
-			tools:ignore="WrongManifestParent">
-			<activity
-				android:name=".homefragment_activity"
-				android:configChanges="orientation|keyboardHidden|screenSize"
-				android:label="@string/app_name"
-				android:exported="true"  >
-				<intent-filter>
-					<action android:name="android.intent.action.MAIN" />
-					<category android:name="android.intent.category.LAUNCHER" />
-				</intent-filter>
-			</activity>
-
-		</application>
-
-
-
->>>>>>> aa2d5bd (Delete commits)
 	</application>
 
 </manifest>
