--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<application
 		android:allowBackup="true"
 		android:theme="@style/AppTheme"
-		android:label="@string/app_name" >
+		android:label="@string/app_label" >
 		<activity
 		android:name=".MainActivity"
 		android:exported="true"  >
